--- a/styles/style.css
+++ b/styles/style.css
@@ -939,6 +939,21 @@ Main Banner CSS
   font-size: 18px;
   margin-bottom: 35px;
 }
+.main-banner .employees {
+  background: #FFF5DA;
+}
+.main-banner .employees .hero-content h1 {
+  color: var(--blackColor);
+  font-size: 35px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.main-banner .employees .hero-content p {
+  color: var(--paragraphColor);
+  font-size: 16px;
+  margin-top: 30px;
+}
 .main-banner .hero-content .btn:hover {
   transform: translateY(0);
 }
