remove unnecessary components and pages

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ Default CSS
 =================================================*/
 :root {
   --fontFamily: "Nunito", sans-serif;
-  --templateColor: #ffffff;
+  --templateColor: #FFF5DA;
   --templateColor2: #384690;
   --whiteColor: #ffffff;
   --blackColor: #000000;
